layout(section): restore larger spacing between sections; layout(top): ensure no top gap by zeroing .page margin; rule: first section heading after anchor has no extra margin

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -17,6 +17,7 @@
 }
 
 .page {
+  margin-top: 0;
   @include breakpoint($large) {
     @include span(9 of 12);
     @include prefix(0 of 12);
@@ -51,10 +52,11 @@
 .page__content {
   #about-me{ margin-top: 0; }
   h1 {
-    margin-top: 0;
+    margin-top: 2.5em;
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
   }
+  .anchor + h1 { margin-top: 0; }
 
   p, li, dl {
     font-size: 1em;
